--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "tailwindcss-debug-screens": "^2.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
